# simple-teller

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  tasks.py
app/: main.py
app/services/: line.py
app/tasks/: style.py
app/templates/: notion_row.json
app/utils/: json_tools.py
